deploy/linstor-scheduler.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: linstor-scheduler
  namespace: kube-system
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: linstor-scheduler
  template:
    metadata:
      labels:
        app.kubernetes.io/name: linstor-scheduler
    spec:
      containers:
        - name: kube-scheduler
          command:
          - kube-scheduler
          - --config=/etc/kubernetes/scheduler-config.yaml
          - --leader-elect=true
          - --leader-elect-resource-name=linstor-scheduler
          - --leader-elect-resource-namespace=$(NAMESPACE)
          image: registry.k8s.io/kube-scheduler-amd64:v1.23.3
          imagePullPolicy: IfNotPresent
          startupProbe:
            failureThreshold: 24
            httpGet:
              path: /healthz
              port: 10259
              scheme: HTTPS
          livenessProbe:
            failureThreshold: 8
            httpGet:
              path: /healthz
              port: 10259
              scheme: HTTPS
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 15
          readinessProbe:
            httpGet:
              path: /healthz
              port: 10259
              scheme: HTTPS
          volumeMounts:
          - mountPath: /etc/kubernetes
            name: scheduler-config
        - name: linstor-scheduler-extender
          image: quay.io/piraeusdatastore/linstor-scheduler-extender:v0.3.2
          imagePullPolicy: IfNotPresent
          args:
          - --verbose=true
      serviceAccountName: linstor-scheduler
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      volumes:
      - configMap:
          defaultMode: 420
          name: linstor-scheduler
        name: scheduler-config
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - topologyKey: kubernetes.io/hostname
              labelSelector:
                matchLabels:
                  app.kubernetes.io/name: linstor-scheduler
