deploy/linstor-scheduler-admission.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: linstor-scheduler-admission
  namespace: kube-system
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: linstor-scheduler-admission
  template:
    metadata:
      labels:
        app.kubernetes.io/name: linstor-scheduler-admission
    spec:
      containers:
      - name: linstor-scheduler-admission
        image: quay.io/piraeusdatastore/linstor-scheduler-extender:v0.3.0
        imagePullPolicy: IfNotPresent
        command: ["/linstor-scheduler-admission"]
        args:
        - -scheduler=linstor
        - -tls-cert-file=/usr/local/certificates/cert
        - -tls-key-file=/usr/local/certificates/key
        volumeMounts:
        - mountPath: /usr/local/certificates/
          name: webhook-cert
          readOnly: true
      serviceAccountName: linstor-scheduler-admission
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      volumes:
      - name: webhook-cert
        secret:
          secretName: linstor-scheduler-admission
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - topologyKey: kubernetes.io/hostname
              labelSelector:
                matchLabels:
                  app.kubernetes.io/name: linstor-scheduler-admission
---
apiVersion: v1
kind: Service
metadata:
  name: linstor-scheduler-admission
  namespace: kube-system
spec:
  selector:
    app.kubernetes.io/name: linstor-scheduler-admission
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: linstor-scheduler-admission
webhooks:
- name: linstor-scheduler-admission.linbit.com
  rules:
  - apiGroups: [""]
    apiVersions: ["v1"]
    operations: ["CREATE"]
    resources: ["pods"]
    scope: "*"
  clientConfig:
    service:
      namespace: kube-system
      name: linstor-scheduler-admission
      path: "/mutate"
      port: 8080
  admissionReviewVersions: ["v1", "v1beta1"]
  sideEffects: None
  failurePolicy: Ignore
